# Github-Badges-API

./: .editorconfig  .env.example  .gitignore  API.md  CONTRIBUTING.md  CREDITS.md  DEPLOY.md  DEVGUIDE.md  Dockerfile  LICENSE  PLUGINS.md  README.md  SECURITY.md  THEMES.md  docker-compose.yml  pyproject.toml  wrangler.toml
api/: index.py
dashboard/templates/: dashboard.html  index.html
k8s/: deployment.yaml
plugins/: system.py
src/: analytics.py  badge.py  cache.py  composer.py  config.py  github.py  main.py  plugin_loader.py  plugins.py  rate_limit.py  scheduler.py  theme_engine.py  utils.py
src/badges/: __init__.py
src/dashboard/: __init__.py
src/dashboard/templates/: dashboard.html  index.html
src/providers/: github.py  pypi.py
src/themes/: __init__.py
tests/: test_badge.py  test_main.py
workers/: index.js
